<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/resultat"
            android:textColor="@color/colorText"
            android:textSize="@dimen/textSizeTitle"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:fontFamily="@font/opensans_light"
            android:layout_gravity="center"
            />
        <View
            android:layout_gravity="center"
            android:id="@+id/vLine"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorLine"
            android:text="@string/title2"
            android:textColor="@color/colorText"
            android:textSize="@dimen/textSizeTitle"
            />
        <TextView
            android:id="@+id/tvTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/in_centimeter"
            android:textColor="@color/colorText"
            android:textSize="@dimen/textSizeCentimeter"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:fontFamily="@font/opensans_light"/>
        <!--app:underlineColor="@color/colorLine"-->
        <!--app:underlineWidth="3dp"-->


    </LinearLayout>

    <ImageView
        android:id="@+id/ivResultat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/start_cicrcle"
        android:clickable="true"
        android:gravity="center"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:text="123"
        android:scaleType="center"
        android:textColor="@color/colorText"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline1"/>

    <TextView
        android:id="@+id/tvResultat"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:clickable="true"
        android:gravity="center"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:text="123"
        android:textColor="@color/colorText"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline1" />

   <Button

    android:id="@+id/btnRes"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:background="@drawable/resultat_back"
    android:text="@string/resultat"
    android:layout_margin="20dp"
       android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />


</android.support.constraint.ConstraintLayout>